sjeng/use_undefined_identifier/c2/display_board
/data/output_dir/patch/sjeng/ida/clang/O2/sjeng-clang-O2/display_board/src/utils.c:810:46: error: use of undeclared identifier 'off_41E860'
fprintf( stream, " %s |", ( const char *)*( &off_41E860 + *( v6 - 11))); 
                                             ^
/data/output_dir/patch/sjeng/ida/clang/O2/sjeng-clang-O2/display_board/src/utils.c:812:46: error: use of undeclared identifier 'off_41E860'
fprintf( stream, " %s |", ( const char *)*( &off_41E860 + *( v6 - 10))); 
                                             ^
/data/output_dir/patch/sjeng/ida/clang/O2/sjeng-clang-O2/display_board/src/utils.c:814:46: error: use of undeclared identifier 'off_41E860'
fprintf( stream, " %s |", ( const char *)*( &off_41E860 + *( v6 - 9))); 
                                             ^
/data/output_dir/patch/sjeng/ida/clang/O2/sjeng-clang-O2/display_board/src/utils.c:816:46: error: use of undeclared identifier 'off_41E860'
fprintf( stream, " %s |", ( const char *)*( &off_41E860 + *( v6 - 8))); 
                                             ^
/data/output_dir/patch/sjeng/ida/clang/O2/sjeng-clang-O2/display_board/src/utils.c:818:46: error: use of undeclared identifier 'off_41E860'
fprintf( stream, " %s |", ( const char *)*( &off_41E860 + *( v6 - 7))); 
                                             ^
/data/output_dir/patch/sjeng/ida/clang/O2/sjeng-clang-O2/display_board/src/utils.c:820:46: error: use of undeclared identifier 'off_41E860'
fprintf( stream, " %s |", ( const char *)*( &off_41E860 + *( v6 - 6))); 
                                             ^
/data/output_dir/patch/sjeng/ida/clang/O2/sjeng-clang-O2/display_board/src/utils.c:822:46: error: use of undeclared identifier 'off_41E860'
fprintf( stream, " %s |", ( const char *)*( &off_41E860 + *( v6 - 5))); 
                                             ^
/data/output_dir/patch/sjeng/ida/clang/O2/sjeng-clang-O2/display_board/src/utils.c:824:46: error: use of undeclared identifier 'off_41E860'
fprintf( stream, " %s |", ( const char *)*( &off_41E860 + *( v6 - 4))); 
                                             ^
/data/output_dir/patch/sjeng/ida/clang/O2/sjeng-clang-O2/display_board/src/utils.c:826:46: error: use of undeclared identifier 'off_41E860'
fprintf( stream, " %s |", ( const char *)*( &off_41E860 + *( v6 - 3))); 
                                             ^
/data/output_dir/patch/sjeng/ida/clang/O2/sjeng-clang-O2/display_board/src/utils.c:828:46: error: use of undeclared identifier 'off_41E860'
fprintf( stream, " %s |", ( const char *)*( &off_41E860 + *( v6 - 2))); 
                                             ^
/data/output_dir/patch/sjeng/ida/clang/O2/sjeng-clang-O2/display_board/src/utils.c:830:46: error: use of undeclared identifier 'off_41E860'
fprintf( stream, " %s |", ( const char *)*( &off_41E860 + *( v6 - 1))); 
                                             ^
/data/output_dir/patch/sjeng/ida/clang/O2/sjeng-clang-O2/display_board/src/utils.c:832:46: error: use of undeclared identifier 'off_41E860'
fprintf( stream, " %s |", ( const char *)*( &off_41E860 + *v6)); 
                                             ^
/data/output_dir/patch/sjeng/ida/clang/O2/sjeng-clang-O2/display_board/src/utils.c:848:46: error: use of undeclared identifier 'off_41E860'
fprintf( stream, " %s |", ( const char *)*( &off_41E860 + *( int *)( v3 + 6715312))); 
                                             ^
/data/output_dir/patch/sjeng/ida/clang/O2/sjeng-clang-O2/display_board/src/utils.c:850:46: error: use of undeclared identifier 'off_41E860'
fprintf( stream, " %s |", ( const char *)*( &off_41E860 + *( int *)( v3 + 6715308))); 
                                             ^
/data/output_dir/patch/sjeng/ida/clang/O2/sjeng-clang-O2/display_board/src/utils.c:852:46: error: use of undeclared identifier 'off_41E860'
fprintf( stream, " %s |", ( const char *)*( &off_41E860 + *( int *)( v3 + 6715304))); 
                                             ^
/data/output_dir/patch/sjeng/ida/clang/O2/sjeng-clang-O2/display_board/src/utils.c:854:46: error: use of undeclared identifier 'off_41E860'
fprintf( stream, " %s |", ( const char *)*( &off_41E860 + *( int *)( v3 + 6715300))); 
                                             ^
/data/output_dir/patch/sjeng/ida/clang/O2/sjeng-clang-O2/display_board/src/utils.c:856:46: error: use of undeclared identifier 'off_41E860'
fprintf( stream, " %s |", ( const char *)*( &off_41E860 + *( int *)( v3 + 6715296))); 
                                             ^
/data/output_dir/patch/sjeng/ida/clang/O2/sjeng-clang-O2/display_board/src/utils.c:858:46: error: use of undeclared identifier 'off_41E860'
fprintf( stream, " %s |", ( const char *)*( &off_41E860 + *( int *)( v3 + 6715292))); 
                                             ^
/data/output_dir/patch/sjeng/ida/clang/O2/sjeng-clang-O2/display_board/src/utils.c:860:46: error: use of undeclared identifier 'off_41E860'
fprintf( stream, " %s |", ( const char *)*( &off_41E860 + *( int *)( v3 + 6715288))); 
                                             ^
/data/output_dir/patch/sjeng/ida/clang/O2/sjeng-clang-O2/display_board/src/utils.c:862:46: error: use of undeclared identifier 'off_41E860'
fprintf( stream, " %s |", ( const char *)*( &off_41E860 + *( int *)( v3 + 6715284))); 
                                             ^
/data/output_dir/patch/sjeng/ida/clang/O2/sjeng-clang-O2/display_board/src/utils.c:864:46: error: use of undeclared identifier 'off_41E860'
fprintf( stream, " %s |", ( const char *)*( &off_41E860 + *( int *)( v3 + 6715280))); 
                                             ^
/data/output_dir/patch/sjeng/ida/clang/O2/sjeng-clang-O2/display_board/src/utils.c:866:46: error: use of undeclared identifier 'off_41E860'
fprintf( stream, " %s |", ( const char *)*( &off_41E860 + *( int *)( v3 + 6715276))); 
                                             ^
/data/output_dir/patch/sjeng/ida/clang/O2/sjeng-clang-O2/display_board/src/utils.c:868:46: error: use of undeclared identifier 'off_41E860'
fprintf( stream, " %s |", ( const char *)*( &off_41E860 + *( int *)( v3 + 6715272))); 
                                             ^
/data/output_dir/patch/sjeng/ida/clang/O2/sjeng-clang-O2/display_board/src/utils.c:870:46: error: use of undeclared identifier 'off_41E860'
fprintf( stream, " %s |", ( const char *)*( &off_41E860 + *( int *)( v3 + 6715268))); 
                                             ^
24 errors generated.
make: *** [/data/output_dir/patch/sjeng/ida/clang/O2/sjeng-clang-O2/display_board/src/obj/utils.o] Error 1
